# Catch2-poc

./: .gitignore  CMakeLists.txt  README.md  commands.txt
src/: Math.cpp  Math.h  String.cpp  String.h
tests/: test_math.cpp  test_string.cpp
